# nfc-laboratory

./: README.md
src/nfc-app/app-qt/: CMakeLists.txt
src/nfc-app/app-qt/src/main/cpp/: main.cpp
src/nfc-lib/lib-ext/: CMakeLists.txt
src/nfc-lib/lib-ext/mirisdr/: CMakeLists.txt
src/nfc-lib/lib-rt/rt-lang/: CMakeLists.txt
src/nfc-lib/lib-sdr/sdr-io/: CMakeLists.txt
src/nfc-lib/lib-sdr/sdr-io/src/main/cpp/: AirspyDevice.cpp  DeviceFactory.cpp  MiriDevice.cpp  RealtekDevice.cpp
src/nfc-lib/lib-sdr/sdr-io/src/main/include/sdr/: MiriDevice.h  RealtekDevice.h
